// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton Styles should render with checked styles 1`] = `
.circuit-0 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:hover+label::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-0:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
  border-color: var(--cui-border-accent);
}

.circuit-0:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-0:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-0:checked+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-0:checked+label::after {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-1::before {
  box-sizing: border-box;
  height: 18px;
  width: 18px;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-1::after {
  box-sizing: border-box;
  height: 10px;
  width: 10px;
  background-color: var(--cui-fg-accent);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  opacity: 0;
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

<div>
  <input
    checked=""
    class="circuit-0"
    id="radio-button_2"
    type="radio"
    value=""
  />
  <label
    class="circuit-1"
    for="radio-button_2"
  >
    Label
  </label>
</div>
`;

exports[`RadioButton Styles should render with default styles 1`] = `
.circuit-0 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:hover+label::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-0:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
  border-color: var(--cui-border-accent);
}

.circuit-0:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-0:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-0:checked+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-0:checked+label::after {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-1::before {
  box-sizing: border-box;
  height: 18px;
  width: 18px;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-1::after {
  box-sizing: border-box;
  height: 10px;
  width: 10px;
  background-color: var(--cui-fg-accent);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  opacity: 0;
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

<div>
  <input
    class="circuit-0"
    id="radio-button_1"
    type="radio"
    value=""
  />
  <label
    class="circuit-1"
    for="radio-button_1"
  >
    Label
  </label>
</div>
`;

exports[`RadioButton Styles should render with disabled styles 1`] = `
.circuit-0 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:hover+label::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-0:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
  border-color: var(--cui-border-accent);
}

.circuit-0:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-0:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-0:checked+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-0:checked+label::after {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1::before {
  box-sizing: border-box;
  height: 18px;
  width: 18px;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-1::after {
  box-sizing: border-box;
  height: 10px;
  width: 10px;
  background-color: var(--cui-fg-accent);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  opacity: 0;
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

.circuit-1::before {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  border-color: var(--cui-border-strong-disabled);
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1::after {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  background-color: var(--cui-fg-on-strong);
}

<div>
  <input
    class="circuit-0"
    disabled=""
    id="radio-button_3"
    type="radio"
    value=""
  />
  <label
    class="circuit-1"
    disabled=""
    for="radio-button_3"
  >
    Label
  </label>
</div>
`;

exports[`RadioButton Styles should render with invalid styles 1`] = `
.circuit-0 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:hover+label::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-0:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
  border-color: var(--cui-border-accent);
}

.circuit-0:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-0:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-0:checked+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-0:checked+label::after {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-0:hover+label::before,
.circuit-0:focus+label::before {
  border-color: var(--cui-border-danger-hovered);
}

.circuit-0:checked+label::before {
  border-color: var(--cui-border-danger);
}

.circuit-1 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-1::before {
  box-sizing: border-box;
  height: 18px;
  width: 18px;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-1::after {
  box-sizing: border-box;
  height: 10px;
  width: 10px;
  background-color: var(--cui-fg-accent);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  opacity: 0;
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

.circuit-1:not(:focus)::before {
  border-color: var(--cui-border-danger);
  background-color: var(--cui-bg-danger);
}

.circuit-1:not(:focus)::after {
  background-color: var(--cui-fg-danger);
}

<div>
  <input
    aria-invalid="true"
    class="circuit-0"
    id="radio-button_4"
    type="radio"
    value=""
  />
  <label
    class="circuit-1"
    for="radio-button_4"
  >
    Label
  </label>
</div>
`;
